--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -4,8 +4,8 @@ bmcgehee/ruby-rails-compose:
   PreInstall:
     - echo "Starting PreInstall"
     # Uncomment this section after the first deployment
-    #- cd /distelli/envs/$DISTELLI_ENV
-    #- sudo /usr/local/bin/docker-compose -p app down
+    - cd /distelli/envs/$DISTELLI_ENV
+    - sudo /usr/local/bin/docker-compose -p app down
   Start:
     - cd $DISTELLI_INSTALLHOME
     - echo "Start Application"
